style.css
/* ... */
#array-sort:hover {
  background: rgb(134, 255, 127);
}
#array-sort:active {
  border: solid 2px rgb(77, 77, 77);
}

#stop-sort {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  border: none;
  box-shadow: 0 0 2px 1px rgb(77, 77, 77);
  background: radial-gradient(
    circle at center,
    rgb(254, 97, 97),
    rgb(157, 0, 0) 100%
  );
  outline: none;
  appearance: none;
}

#stop-sort:hover {
  background: rgb(255, 113, 113);
}

#stop-sort:active {
  border: solid 2px rgb(77, 77, 77);
}

/* play stop icon styling */
#array-sort > i {
  color: rgb(233, 242, 255);
}

#stop-sort > i {
  color: rgb(233, 242, 255);
}

/* link icons */

.links {
  align-self: center;

  margin-top: 20px;
  padding-top: 10px;
  padding-bottom: 10px;
  background: rgb(68, 68, 68);

  width: 85%;
  display: flex;
  justify-content: space-around;
  border-radius: 8px;
  box-shadow: 0 0 5px 5px rgba(157, 200, 255, 0.5);
}

.links > a {
  appearance: none;
  color: white;
}

/* about modal styling */
.modal {
  display: flex; /* default: visible */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%;
  overflow: auto; /* Enable scroll if needed */
  background-color: rgba(0, 0, 0, 0.488); /* Fallback color */
}

.about-content {
  background: #4f4f4f;
  position: fixed;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 600px;
  height: 400px;
  padding: 30px;
  border-radius: 10px;
  border: none;
  box-shadow: 0 0 5px 5px rgba(157, 200, 255, 0.611);
  animation-name: animatetop;
  animation-duration: .5s;
}

@keyframes animatetop {
    from {top: -300px; opacity: 0}
    from {right: -300px; opacity: 0}
    to {top: 0; opacity: 1}
    to {right: 0; opacity: 1}
}
.about-content > h1 {
  color: rgb(201, 201, 201);
  font-size: 35px;
  font-family: SF Pro Text, SF Pro Icons, Helvetica Neue, Helvetica, Arial,
    sans-serif;
  font-weight: 500;
  text-align: center;
  text-shadow: 0 0 8px #67bdff;
  padding-top: 10px;
  padding-bottom: 20px;
}

.about-content > p {
    line-height: 1.5;
    padding-top: 20px;
    font-family: SF Pro Text, SF Pro Icons, Helvetica Neue, Helvetica, Arial,
    sans-serif;
    font-weight: 400;
    font-size: 16px;
    color: rgb(201, 201, 201);
    text-shadow: 0 0 4px #f4a9ff;
}
.about-content > h2 {
    text-align: center;
    padding-top: 40px;
    font-family: SF Pro Text, SF Pro Icons, Helvetica Neue, Helvetica, Arial,
    sans-serif;
    font-weight: 400;
    font-size: 30px;
    color: rgb(201, 201, 201);
    text-shadow: 0 0 4px #deff67;
}
/* Close Button */
.close {
  margin-right: -20px;
  margin-top: -25px;
  color: #aaa;
  float: right;
  font-size: 28px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: white;
  text-decoration: none;
  cursor: pointer;
  text-shadow: 0 0 8px #67bdff;
}

/* flickering modal button */
#modal-button {
    width: 31px;
    height: 31px;
    border-radius: 50%;
    border: none;
    background: rgb(29, 29, 29);
    box-shadow: 0 0 4px 2px rgb(157, 200, 255);
    color: rgb(115, 176, 255);
    appearance: none;
    outline: none;
}

#modal-button > i {
    font-size: 26px;
    font-weight: 400;
    margin-left: -3.6px;
    margin-top: 0.8px;
}
#modal-button:hover {
    color: rgb(255, 115, 115);
    box-shadow: 0 0 4px 2px rgb(255, 157, 157);
}

